feat: migrate to java 17 and Jackson 3 (#5314)
---------

Signed-off-by: Vasily Pelikh <2010720+vpelikh@users.noreply.github.com>
Co-authored-by: Vasily Pelikh <2010720+vpelikh@users.noreply.github.com>