@@ -12,24 +12,25 @@ import com.fasterxml.jackson.annotation.JsonValue;
 import com.fasterxml.jackson.annotation.JsonView;
 import com.fasterxml.jackson.annotation.ObjectIdGenerator;
 import com.fasterxml.jackson.annotation.ObjectIdGenerators;
-import com.fasterxml.jackson.databind.AnnotationIntrospector;
-import com.fasterxml.jackson.databind.BeanDescription;
-import com.fasterxml.jackson.databind.JavaType;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.PropertyMetadata;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.databind.annotation.JsonNaming;
-import com.fasterxml.jackson.databind.annotation.JsonSerialize;
-import com.fasterxml.jackson.databind.introspect.Annotated;
-import com.fasterxml.jackson.databind.introspect.AnnotatedClass;
-import com.fasterxml.jackson.databind.introspect.AnnotatedField;
-import com.fasterxml.jackson.databind.introspect.AnnotatedMember;
-import com.fasterxml.jackson.databind.introspect.AnnotatedMethod;
-import com.fasterxml.jackson.databind.introspect.BeanPropertyDefinition;
-import com.fasterxml.jackson.databind.introspect.POJOPropertyBuilder;
-import com.fasterxml.jackson.databind.jsontype.NamedType;
-import com.fasterxml.jackson.databind.util.Annotations;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.AnnotationIntrospector;
+import tools.jackson.databind.BeanDescription;
+import tools.jackson.databind.JavaType;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.PropertyMetadata;
+import tools.jackson.databind.annotation.JsonSerialize;
+import tools.jackson.databind.annotation.JsonNaming;
+import tools.jackson.databind.cfg.EnumFeature;
+import tools.jackson.databind.introspect.Annotated;
+import tools.jackson.databind.introspect.AnnotatedClass;
+import tools.jackson.databind.introspect.AnnotatedField;
+import tools.jackson.databind.introspect.AnnotatedMember;
+import tools.jackson.databind.introspect.AnnotatedMethod;
+import tools.jackson.databind.introspect.BeanPropertyDefinition;
+import tools.jackson.databind.introspect.POJOPropertyBuilder;
+import tools.jackson.databind.jsontype.NamedType;
+import tools.jackson.databind.util.Annotations;
 import io.swagger.v3.core.converter.AnnotatedType;
 import io.swagger.v3.core.converter.ModelConverter;
 import io.swagger.v3.core.converter.ModelConverterContext;
@@ -86,11 +87,9 @@ import javax.xml.bind.annotation.XmlElementRef;
 import javax.xml.bind.annotation.XmlElementRefs;
 import javax.xml.bind.annotation.XmlRootElement;
 import javax.xml.bind.annotation.XmlSchema;
-import java.io.IOException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedParameterizedType;
 import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Type;
 import java.math.BigDecimal;
@@ -120,7 +119,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
     Logger LOGGER = LoggerFactory.getLogger(ModelResolver.class);
     public static List<String> NOT_NULL_ANNOTATIONS = Arrays.asList("NotNull", "NonNull", "NotBlank", "NotEmpty");
-    public static List<String> NULLABLE_ANNOTATIONS = Arrays.asList("Nullable");
+    public static List<String> NULLABLE_ANNOTATIONS = List.of("Nullable");
 
     public static final String SET_PROPERTY_OF_COMPOSED_MODEL_AS_SIBLING = "composed-model-properties-as-sibiling";
     public static final String SET_PROPERTY_OF_ENUMS_AS_REF = "enums-as-ref";
@@ -190,7 +189,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
         final BeanDescription beanDesc;
         {
-            BeanDescription recurBeanDesc = _mapper.getSerializationConfig().introspect(type);
+            BeanDescription recurBeanDesc = _mapper._serializationContext().introspectBeanDescription(type);
 
             HashSet<String> visited = new HashSet<>();
             JsonSerialize jsonSerialize = recurBeanDesc.getClassAnnotations().get(JsonSerialize.class);
@@ -199,7 +198,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 if (visited.contains(asName)) break;
                 visited.add(asName);
 
-                recurBeanDesc = _mapper.getSerializationConfig().introspect(
+                recurBeanDesc = _mapper._serializationContext().introspectBeanDescription(
                         _mapper.constructType(jsonSerialize.as())
                 );
                 jsonSerialize = recurBeanDesc.getClassAnnotations().get(JsonSerialize.class);
@@ -317,7 +316,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
         if (model == null && !annotatedType.isSkipOverride() && resolvedSchemaAnnotation != null &&
             StringUtils.isNotEmpty(resolvedSchemaAnnotation.type()) &&
-            !resolvedSchemaAnnotation.type().equals("object")) {
+            !resolvedSchemaAnnotation.type().equals(OBJECT_TYPE)) {
             PrimitiveType primitiveType = PrimitiveType.fromTypeAndFormat(resolvedSchemaAnnotation.type(), resolvedSchemaAnnotation.format());
             if (primitiveType == null) {
                 primitiveType = PrimitiveType.fromType(type);
@@ -470,7 +469,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
             JavaType valueType = type.getContentType();
             String pName = null;
             if (valueType != null) {
-                BeanDescription valueTypeBeanDesc = _mapper.getSerializationConfig().introspect(valueType);
+                BeanDescription valueTypeBeanDesc = _mapper._serializationContext().introspectBeanDescription(valueType);
                 pName = _typeName(valueType, valueTypeBeanDesc);
             }
             List<Annotation> strippedCtxAnnotations = new ArrayList<>();
@@ -480,7 +479,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
             if (annotatedType.getCtxAnnotations() != null) {
                 strippedCtxAnnotations.addAll(Arrays.stream(annotatedType.getCtxAnnotations())
                         .filter(ANNOTATIONS_THAT_SHOULD_BE_STRIPPED_FOR_CONTAINER_ITEMS.negate())
-                        .collect(Collectors.toList()));
+                        .toList());
             }
 
             Schema.SchemaResolution containerResolvedSchemaResolution = AnnotationsUtils.resolveSchemaResolution(this.schemaResolution, resolvedSchemaAnnotation);
@@ -547,10 +546,9 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                     return null;
                 }
                 if (annotatedType.isSchemaProperty() && annotatedType.getCtxAnnotations() != null && annotatedType.getCtxAnnotations().length > 0) {
-                    if (!"object".equals(items.getType())) {
+                    if (!OBJECT_TYPE.equals(items.getType())) {
                         for (Annotation annotation : annotatedType.getCtxAnnotations()) {
-                            if (annotation instanceof XmlElement) {
-                                XmlElement xmlElement = (XmlElement) annotation;
+                            if (annotation instanceof XmlElement xmlElement) {
                                 if (xmlElement != null && xmlElement.name() != null && !"".equals(xmlElement.name()) && !JAXB_DEFAULT.equals(xmlElement.name())) {
                                     XML xml = items.getXml() != null ? items.getXml() : new XML();
                                     xml.setName(xmlElement.name());
@@ -658,7 +656,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
             AnnotatedMember member = propDef.getPrimaryMember();
             if (member == null) {
-                final BeanDescription deserBeanDesc = _mapper.getDeserializationConfig().introspect(type);
+                final BeanDescription deserBeanDesc = _mapper._deserializationContext().introspectBeanDescription(type);
                 List<BeanPropertyDefinition> deserProperties = deserBeanDesc.findProperties();
                 for (BeanPropertyDefinition prop : deserProperties) {
                     if (StringUtils.isNotBlank(prop.getInternalName()) && prop.getInternalName().equals(propDef.getInternalName())) {
@@ -678,7 +676,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
             // "issuance_date" and the raw member name must not clobber the translated one
             // (see springdoc/springdoc-openapi#3293).
             if (propDef.getPrimaryMember() != null
-                    && _mapper.getSerializationConfig().getPropertyNamingStrategy() == null
+                    && _mapper._serializationContext().getConfig().getPropertyNamingStrategy() == null
                     && jsonNamingAnnotation == null) {
                 final JsonProperty jsonPropertyAnn = propDef.getPrimaryMember().getAnnotation(JsonProperty.class);
                 if (jsonPropertyAnn == null || !jsonPropertyAnn.value().equals(propName)) {
@@ -705,13 +703,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
             PropertyMetadata md = propDef.getMetadata();
 
             if (member != null && !ignore(member, xmlAccessorTypeAnnotation, propName, propertiesToIgnore, propDef)) {
-
-                List<Annotation> annotationList = new ArrayList<>();
-                for (Annotation a : member.annotations()) {
-                    annotationList.add(a);
-                }
-
-                annotations = annotationList.toArray(new Annotation[annotationList.size()]);
+                annotations = member.annotations().toArray(Annotation[]::new);
 
                 if (hiddenByJsonView(annotations, annotatedType)) {
                     continue;
@@ -719,8 +711,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
                 JavaType propType = member.getType();
                 if (propType != null && "void".equals(propType.getRawClass().getName())) {
-                    if (member instanceof AnnotatedMethod) {
-                        propType = ((AnnotatedMethod) member).getParameterType(0);
+                    if (member instanceof AnnotatedMethod annotatedMethod) {
+                        propType = annotatedMethod.getParameterType(0);
                     }
 
                 }
@@ -862,7 +854,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                             }
                         }
                     }
-                    final BeanDescription propBeanDesc = _mapper.getSerializationConfig().introspect(propType);
+                    final BeanDescription propBeanDesc = _mapper._serializationContext().introspectBeanDescription(propType);
                     if (property != null && !propType.isContainerType()) {
                         if (isObjectSchema(property)) {
                             // create a reference for the property
@@ -1042,7 +1034,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                     .distinct()
                     .filter(c -> !this.shouldIgnoreClass(c))
                     .filter(c -> !(c.equals(Void.class)))
-                    .collect(Collectors.toList());
+                    .toList();
             allOfFiltered.forEach(c -> {
                 Schema allOfRef = context.resolve(new AnnotatedType().components(annotatedType.getComponents()).type(c).jsonViewAnnotation(annotatedType.getJsonViewAnnotation()));
                 Schema refSchema = new Schema().$ref(Components.COMPONENTS_SCHEMAS_REF + allOfRef.getName());
@@ -1063,7 +1055,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                     .distinct()
                     .filter(c -> !this.shouldIgnoreClass(c))
                     .filter(c -> !(c.equals(Void.class)))
-                    .collect(Collectors.toList());
+                    .toList();
             anyOfFiltered.forEach(c -> {
                 Schema anyOfRef = context.resolve(new AnnotatedType().components(annotatedType.getComponents()).type(c).jsonViewAnnotation(annotatedType.getJsonViewAnnotation()));
                 if (anyOfRef != null) {
@@ -1084,7 +1076,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                     .distinct()
                     .filter(c -> !this.shouldIgnoreClass(c))
                     .filter(c -> !(c.equals(Void.class)))
-                    .collect(Collectors.toList());
+                    .toList();
             oneOfFiltered.forEach(c -> {
                 Schema oneOfRef = context.resolve(new AnnotatedType().components(annotatedType.getComponents()).type(c).jsonViewAnnotation(annotatedType.getJsonViewAnnotation()));
                 if (oneOfRef != null) {
@@ -1245,17 +1237,15 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 .anyMatch(schema -> ref.equals(schema.get$ref()));
     }
 
-    private Boolean isRecordType(BeanPropertyDefinition propDef) {
+    private boolean isRecordType(BeanPropertyDefinition propDef) {
         try {
-            if (propDef.getPrimaryMember() != null) {
+            if (propDef != null && propDef.getPrimaryMember() != null) {
                 Class<?> clazz = propDef.getPrimaryMember().getDeclaringClass();
                 Method isRecordMethod = Class.class.getMethod("isRecord");
-                return (Boolean) isRecordMethod.invoke(clazz);
+                return (boolean) isRecordMethod.invoke(clazz);
             } else {
                 return false;
             }
-        } catch (NoSuchMethodException e) {
-            return false;
         } catch (Exception e) {
             return false;
         }
@@ -1268,11 +1258,9 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     private Stream<Annotation> getGenericTypeArgumentAnnotations(java.lang.reflect.AnnotatedType annotatedType) {
         return Optional.of(annotatedType)
                 .filter(type -> type instanceof AnnotatedParameterizedType)
-                .map(type -> (AnnotatedParameterizedType) type)
-                .map(AnnotatedParameterizedType::getAnnotatedActualTypeArguments)
-                .map(types -> Stream.of(types)
-                        .flatMap(type -> Stream.of(type.getAnnotations())))
-                .orElseGet(Stream::of);
+                .map(AnnotatedParameterizedType.class::cast)
+                .map(AnnotatedParameterizedType::getAnnotatedActualTypeArguments).stream().flatMap(types -> Stream.of(types)
+                        .flatMap(type -> Stream.of(type.getAnnotations())));
     }
 
     private boolean shouldResolveEnumAsRef(io.swagger.v3.oas.annotations.media.Schema resolvedSchemaAnnotation, boolean isResolveEnumAsRef) {
@@ -1280,28 +1268,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     protected Type findJsonValueType(final BeanDescription beanDesc) {
-
-        // use recursion to check for method findJsonValueAccessor existence (Jackson 2.9+)
-        // if not found use previous deprecated method which could lead to inaccurate result
-        try {
-            AnnotatedMember jsonValueMember = invokeMethod(beanDesc, "findJsonValueAccessor");
-            if (jsonValueMember != null) {
-                return jsonValueMember.getType();
-            }
-            return null;
-        } catch (Exception e) {
-            LOGGER.warn("jackson BeanDescription.findJsonValueAccessor not found, this could lead to inaccurate result, please update jackson to 2.9+");
-        }
-
-        try {
-            AnnotatedMember jsonValueMember = invokeMethod(beanDesc, "findJsonValueMethod");
-            if (jsonValueMember != null) {
-                return jsonValueMember.getType();
-            }
-        } catch (Exception e) {
-            LOGGER.error("Neither 'findJsonValueMethod' nor 'findJsonValueAccessor' found in jackson BeanDescription. Please verify your Jackson version.");
-        }
-        return null;
+        AnnotatedMember jsonValueMember = beanDesc.findJsonValueAccessor();
+        return jsonValueMember != null ? jsonValueMember.getType() : null;
     }
 
     private Schema clone(Schema property) {
@@ -1309,8 +1277,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     private boolean isSubtype(AnnotatedClass childClass, Class<?> parentClass) {
-        final BeanDescription parentDesc = _mapper.getSerializationConfig().introspectClassAnnotations(parentClass);
-        List<NamedType> subTypes = _intr().findSubtypes(parentDesc.getClassInfo());
+        final AnnotatedClass parentDesc = _mapper._serializationContext().introspectClassAnnotations(parentClass);
+        List<NamedType> subTypes = _intr().findSubtypes(_mapper.serializationConfig(), parentDesc);
         if (subTypes == null) {
             return false;
         }
@@ -1351,8 +1319,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
      * @param enumClass the enum class for which to add properties
      */
     protected Schema _createSchemaForEnum(Class<Enum<?>> enumClass) {
-        boolean useIndex = _mapper.isEnabled(SerializationFeature.WRITE_ENUMS_USING_INDEX);
-        boolean useToString = _mapper.isEnabled(SerializationFeature.WRITE_ENUMS_USING_TO_STRING);
+        boolean useIndex = _mapper.isEnabled(EnumFeature.WRITE_ENUMS_USING_INDEX);
+        boolean useToString = _mapper.isEnabled(EnumFeature.WRITE_ENUMS_USING_TO_STRING);
 
 		Optional<Method> jsonValueMethod = ReflectionUtils.getAnnotatedMethods(enumClass, JsonValue.class).stream()
 				.findFirst();
@@ -1383,7 +1351,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         Enum<?>[] enumConstants = enumClass.getEnumConstants();
 
         if (enumConstants != null) {
-            String[] enumValues = _intr().findEnumValues(enumClass, enumConstants,
+            AnnotatedClass annotatedClass = _mapper._serializationContext().introspectClassAnnotations(enumClass);
+            String[] enumValues = _intr().findEnumValues(_mapper.serializationConfig(), annotatedClass, enumConstants,
                     new String[enumConstants.length]);
 
             for (Enum<?> en : enumConstants) {
@@ -1408,7 +1377,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 } else if (useToString) {
                     n = en.toString();
                 } else {
-                    n = _intr().findEnumValue(en);
+                    n = en.name();
                 }
                 schema.addEnumItemObject(n);
             }
@@ -1505,7 +1474,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                         String baseName = prop.getName() != null ? prop.getName() : entry.getKey();
                         clonedProp.setName(prefix + baseName + suffix);
                         props.add(clonedProp);
-                    } catch (IOException e) {
+                    } catch (JacksonException e) {
                         LOGGER.error("Exception cloning property", e);
                         return;
                     }
@@ -1557,7 +1526,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 } else {
                     javaType = mapper.constructType(type.getType());
                 }
-                final BeanDescription beanDesc = mapper.getSerializationConfig().introspect(javaType);
+                final BeanDescription beanDesc = mapper._serializationContext().introspectBeanDescription(javaType);
                 for (BeanPropertyDefinition def : beanDesc.findProperties()) {
                     final String name = def.getName();
                     if (name != null && name.equals(propertyName)) {
@@ -1566,11 +1535,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                         if (PrimitiveType.fromType(propType) != null) {
                             return PrimitiveType.createProperty(propType, openapi31);
                         } else {
-                            List<Annotation> list = new ArrayList<>();
-                            for (Annotation a : propMember.annotations()) {
-                                list.add(a);
-                            }
-                            Annotation[] annotations = list.toArray(new Annotation[list.size()]);
+                            Annotation[] annotations = propMember.annotations().toArray(Annotation[]::new);
                             AnnotatedType aType = new AnnotatedType()
                                     .type(propType)
                                     .ctxAnnotations(annotations)
@@ -1842,7 +1807,6 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         if (parent != null && annos.containsKey(JAVAX_NOT_NULL) && applyNotNullAnnotations) {
             NotNull anno = (NotNull) annos.get(JAVAX_NOT_NULL);
             if (anno.groups().length == 0 && acceptNoGroups) {
-                ;
                 // no groups, so apply
                 modified = updateRequiredItem(parent, property.getName()) || modified;
             } else {
@@ -2036,7 +2000,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     private boolean resolveSubtypes(Schema model, BeanDescription bean, ModelConverterContext context, JsonView jsonViewAnnotation) {
-        final List<NamedType> types = _intr().findSubtypes(bean.getClassInfo());
+        final List<NamedType> types = _intr().findSubtypes(_mapper.serializationConfig(), bean.getClassInfo());
         if (types == null) {
             return false;
         }
@@ -2136,8 +2100,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
     private void removeSuperSubTypes(List<NamedType> resultTypes, Class<?> superClass) {
         JavaType superType = _mapper.constructType(superClass);
-        BeanDescription superBean = _mapper.getSerializationConfig().introspect(superType);
-        final List<NamedType> superTypes = _intr().findSubtypes(superBean.getClassInfo());
+        BeanDescription superBean = _mapper._serializationContext().introspectBeanDescription(superType);
+        final List<NamedType> superTypes = _intr().findSubtypes(_mapper.serializationConfig(), superBean.getClassInfo());
         if (superTypes != null) {
             resultTypes.removeAll(superTypes);
         }
@@ -2171,7 +2135,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                     .distinct()
                     .filter(c -> !this.shouldIgnoreClass(c))
                     .filter(c -> !(c.equals(Void.class)))
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (!parentClasses.isEmpty()) {
                 return parentClasses;
@@ -2368,7 +2332,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                     }
                 }
                 return node;
-            } catch (IOException e) {
+            } catch (JacksonException e) {
                 return schema.defaultValue();
             }
         }
@@ -2409,7 +2373,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                         }
                     }
                     return node;
-                } catch (IOException e) {
+                } catch (JacksonException e) {
                     return schema.example();
                 }
             }
@@ -2471,7 +2435,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         boolean hasField = propDef.hasField();
 
         if (access == null) {
-            final BeanDescription beanDesc = _mapper.getDeserializationConfig().introspect(type);
+            final BeanDescription beanDesc = _mapper._deserializationContext().introspectBeanDescription(type);
             List<BeanPropertyDefinition> properties = beanDesc.findProperties();
             for (BeanPropertyDefinition prop : properties) {
                 if (StringUtils.isNotBlank(prop.getInternalName()) && prop.getInternalName().equals(propDef.getInternalName())) {
@@ -3110,7 +3074,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
         final Annotation resolvedSchemaOrArrayAnnotation = AnnotationsUtils.mergeSchemaAnnotations(annotatedType.getCtxAnnotations(), type);
         final io.swagger.v3.oas.annotations.media.Schema schemaAnnotation = getSchemaAnnotation(resolvedSchemaOrArrayAnnotation);
 
-        final BeanDescription beanDesc = _mapper.getSerializationConfig().introspect(type);
+        final BeanDescription beanDesc = _mapper._serializationContext().introspectBeanDescription(type);
         Annotated a = beanDesc.getClassInfo();
         Annotation[] annotations = annotatedType.getCtxAnnotations();
         resolveSchemaMembers(schema, a, annotations, schemaAnnotation);
@@ -3390,8 +3354,7 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
                 return true;
             }
         } else {
-            if (type instanceof com.fasterxml.jackson.core.type.ResolvedType) {
-                com.fasterxml.jackson.core.type.ResolvedType rt = (com.fasterxml.jackson.core.type.ResolvedType) type;
+            if (type instanceof tools.jackson.core.type.ResolvedType rt) {
                 LOGGER.trace("Can't check class {}, {}", type, rt.getRawClass().getName());
                 if (rt.getRawClass().equals(Class.class)) {
                     return true;
@@ -3402,8 +3365,8 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
     }
 
     private List<String> getIgnoredProperties(BeanDescription beanDescription) {
-        AnnotationIntrospector introspector = _mapper.getSerializationConfig().getAnnotationIntrospector();
-        JsonIgnoreProperties.Value v = introspector.findPropertyIgnorals(beanDescription.getClassInfo());
+        AnnotationIntrospector introspector = _mapper.serializationConfig().getAnnotationIntrospector();
+        JsonIgnoreProperties.Value v = introspector.findPropertyIgnoralByName(_mapper.serializationConfig(), beanDescription.getClassInfo());
         Set<String> ignored = null;
         if (v != null) {
             ignored = v.findIgnoredForSerialization();
@@ -3599,11 +3562,6 @@ public class ModelResolver extends AbstractModelConverter implements ModelConver
 
     protected boolean isNumberSchema(Schema schema) {
         return SchemaTypeUtils.isNumberSchema(schema);
-    }
-
-    private AnnotatedMember invokeMethod(final BeanDescription beanDesc, String methodName) throws NoSuchMethodException, IllegalAccessException, InvocationTargetException {
-        Method m = BeanDescription.class.getMethod(methodName);
-        return (AnnotatedMember) m.invoke(beanDesc);
     }
 
     protected Schema buildRefSchemaIfObject(Schema schema, ModelConverterContext context) {
